Minor changes to the view

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,18 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  background-color: violet;
-  color: turquoise;
+  background-color: turquoise;
   text-align: center;
 }
 
-h1, h2, h5 {
-  color: green;
-}
-
-h3, h4, h6 {
-  color: cyan;
-}
 
 #mesg {
   width: 70%;
