--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -10,9 +10,12 @@
 <br>
 <br>
 <form action='/users/welcome' method='post'>
-  Title: <br>
+  <u><strong>Title:</strong></u> <br>
+  <br>
   <input type="text" name="post_title" id='title' required/><br>
-  Message:<br>
+  <br>
+  <u><strong>Message:</strong></u><br>
+  <br>
   <input type="text" name="post_message" id='mesg' required/><br>
   <input type="submit" value="Blog!" />
 </form>
